[package]
name = "ansible-tf2network-relay"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12.2"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
sourcon = { git = "https://github.com/crescentrose/sourcon.git", rev = "12646f8" }
rsourcequery = { git = "https://github.com/jack-avery/rsourcequery.git", rev = "8e0aee5" }
serde_yaml = "0.9.34"
serde = "1.0.203"
thiserror = "1.0.61"
regex = "1.10.5"
itertools = "0.13.0"
once_cell = "1.20.2"
